turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:6: error: type mismatch;
 found   : Int
 required: java.awt.Color
  if (ci==colors.length) {colorie(colors(0))} else {colorie (ci+1)}
                                                               ^